--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -18,13 +18,12 @@
 
 
   <div class="span8">
-        <% flash.each do |type, message| %>
+    <% flash.each do |type, message| %>
       <div class="alert <%= flash_class type %>">
         <button class="close" data-dismiss="alert">x</button>
         <%= message %>
       </div>
     <% end %>
-
 
     <% if user_signed_in? %>
       <div>
@@ -34,25 +33,20 @@
     <% end %>
 
 
-
     <% comentarios = Comment.where(topic_id: @topic) %>
     <div class="comment">
       <% comentarios.each do |comment| %>
         <div class="comment_description">
+        <% if user_signed_in? && comment.user_id == current_user.id %>
           <div class="admin pull-right">
             <%= link_to '<i class="icon-edit"></i>'.html_safe, edit_comment_path(comment) %>
             <%= link_to '<i class="icon-remove"></i>'.html_safe, comment, method: :delete, data: { confirm: 'Are you sure?' } %> 
           </div>
+        <% end %>
           <p class="hidden"><%= comment.topic_id %></p>
           <p class="user_name"><%= User.find(comment.user_id).full_name %></p>
           <p><%= comment.content %></p>
         </div>
-
-
-
-
-
-
 
 
         <% respostas = Answer.where(comment_id: comment) %>
@@ -74,14 +68,6 @@
         <% end %>
 
 
-
-
-
-
-
-
-
-
         <% if user_signed_in? %>
           <div class="collapse" id="<%= comment.id %>">
             <div>
@@ -91,7 +77,7 @@
             </div>
             <div id="<%= comment.id %>a" class="answer">
               <% if respostas.size != 0 %>
-                <% Answer.where(comment_id: comment).each do |answer| %>
+                <% respostas.each do |answer| %>
                   <div class="answer_description">
                     <p class="hidden"><%= answer.comment_id %></p>
                     <p class="user_name"><%= User.find(answer.user_id).full_name %></p>
@@ -108,24 +94,11 @@
               <% end %>
             </div>
           </div>
-
-
-
-
-
-
-
-
-
-
         <% else %>
           <div class="collapse" id="<%= comment.id %>">
-            <div>
-              <%#= render : "new_answer" %>
-            </div>
-            <div class="answer">
-              <% if Answer.where(comment_id: comment).size != 0 %>
-                <% Answer.where(comment_id: comment).each do |answer| %>
+            <div id="<%= comment.id %>a" class="answer">
+              <% if respostas.size != 0 %>
+                <% respostas.each do |answer| %>
                   <div class="answer_description">
                     <p class="hidden"><%= answer.comment_id %></p>
                     <p class="user_name"><%= User.find(answer.user_id).full_name %></p>
@@ -142,20 +115,8 @@
               <% end %>
             </div>
           </div>
-
-
-
-
-
-
-
-
-
-
         <% end %>
       <% end %>
-
-      <%# if user_signed_in? %>
 
 
 
